@@ -39,6 +39,7 @@ Application Fixes:
 - Adepts with an adept power that they both have free levels/ranks in and have put PP into manually now get those PPs automatically removed from said power should the adept stop being an adept.
 - Added two new XML node types to gear: isflechetteammo and flechetteweaponbonus. The former node, if its contents are set to True, indicates that the gear in question could be used by a weapon that can only fire flechette ammunition. The latter is a special version of the weaponbonus node that is only applied if the gear is loaded into a weapon that can only fire flechette ammunition, overriding the weaponbonus entry if it does so.
 - Weapons that can only fire flechette ammunition can now properly only be loaded with flechette ammunition. Existing save files where these weapons are loaded with non-flechette ammunition will automatically unload said ammunition.
+- Custom files for character sheets now work properly, though people who do wish to use them are recommended to add entries in every single language found in sheets.xml.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
